- fix: z-index(2)

--- a/src/sass/components/_info_container.scss
+++ b/src/sass/components/_info_container.scss
@@ -48,7 +48,7 @@
         position: absolute;
         top: -50%;
         right: -50%;
-        z-index: -1;
+        z-index: 0;
         @include select(none);
 
         transform: translate(10%, -35%);
@@ -57,11 +57,17 @@
         }
       }
 
+      img, video {
+        z-index: 1;
+        position: relative;
+      }
+
       .play-icon {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        z-index: 1;
       }
     }
 
